# astroio

./: .gitignore  CMakeLists.txt  README.md  build.sh
apps/: adjust_fits.cpp
src/: FITS.cpp  FITS.hpp  astroio.cpp  astroio.hpp  files.cpp  files.hpp  gpu_fft.hpp  gpu_macros.cpp  gpu_macros.hpp  images.cpp  images.hpp  jones_matrix.hpp  memory_buffer.hpp  metafits_mapping.cpp  metafits_mapping.hpp  mycomplex.hpp  utils.cpp  utils.hpp
tests/: astroio_test.cpp  common.hpp  fits_test.cpp  memory_buffer_test.cpp  metadata_test.cpp  utils_test.cpp
